--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en_US">
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -34,6 +34,13 @@
             </section>
             <section>
                 <h4>Links</h4>
+                <div>
+                    <a href="#">Anchor</a>
+                </div>
+                <div>
+                    <button class="link">Button as a link</button>
+                </div>
+                <p>Links inside text will be <a class="link">underlined</a> so that they stand out.</p>
             </section>
             <section>
                 <h5>Heading 5</h5>
